added project link hover state

--- a/dew.html
+++ b/dew.html
@@ -144,27 +144,27 @@
 
 
     <div class="border-top py-5 mt-3" color="#ffffff">
-      <h2 class="header-2 text-center pb-3">
+      <h2 class="header-2 text-center pb-4">
         Looking for more?
       </h2>
 
       <div class="row">
 
-        <div class="col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-3 mx-auto">
           <a href="calpolyracing.html">
             <img class="img-fluid" src="Images/racing_homePage.png"
               alt="A laptop screen displaying the the Formula SAE page of the Cal Poly Racing website.">
           </a>
         </div>
 
-        <div class="col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-3 mx-auto">
           <a href="xvela.html">
             <img class="img-fluid" src="Images/xvela_homePage.png"
               alt="Four white icons (a ship's steering wheel, a globe with a GPS marker, binoculars, and a lightbulb) arranged in a two by two square with blue and orange as alternating background colors..">
           </a>
         </div>
 
-        <div class="col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-3 mx-auto">
           <a href="36minutesoftype.html">
             <img class="img-fluid" src="Images/36MinutesOfType_igArtboard-1.png"
               alt="Sketches of the letters A through I arranged in a 3 by 3 square.">
