--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="row pb-5 pt-3">
 
-      <div class="col-12 col-sm-6 py-5">
+      <div class="project-link col-12 col-sm-6 py-5 my-4">
         <a href="grove.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3" src="Images/grove_homePage.png"
             alt="A computer showing the Grove home page of the website.">
@@ -78,7 +78,7 @@
         </a>
       </div>
 
-      <div class="col-12 col-sm-6 py-5">
+      <div class="project-link col-12 col-sm-6 py-5 my-4">
         <a href="loop.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3" src="Images/loop_homePage.png"
             alt="Five iPhone screens showing different pages of the Loop app: a list of daily tasks, an events page, a single task page, a user profile, and a community challenge page.">
@@ -88,7 +88,7 @@
         </a>
       </div>
 
-      <div class="col-12 col-sm-6 py-5">
+      <div class="project-link col-12 col-sm-6 py-5 my-4">
         <a href="lacroix.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3" src="Images/lacroix_homePage.png"
             alt="A rebranded carrying case of six bottles of LaCroix.">
@@ -98,7 +98,7 @@
         </a>
       </div>
 
-      <div class="col-12 col-sm-6 py-5">
+      <div class="project-link col-12 col-sm-6 py-5 my-4">
         <a href="dew.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3" src="Images/dew_homePage.png"
             alt="Two business cards. The front of the card shows the Dew logo and the back of the card features a vine pattern along with the name, job, and email address of the restaurant owner and the website, phone number, and address of the restaurant.">
@@ -108,7 +108,7 @@
         </a>
       </div>
 
-      <div class="col-12 col-sm-6 py-5">
+      <div class="project-link col-12 col-sm-6 py-5 my-4">
         <a href="calpolyracing.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3" src="Images/racing_homePage.png"
             alt="A laptop screen displaying the the Formula SAE page of the Cal Poly Racing website.">
@@ -118,7 +118,7 @@
         </a>
       </div>
 
-      <div class="col-12 col-sm-6 py-5">
+      <div class="project-link col-12 col-sm-6 py-5 my-4">
         <a href="xvela.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3" src="Images/xvela_homePage.png"
             alt="Four white icons (a ship's steering wheel, a globe with a GPS marker, binoculars, and a lightbulb) arranged in a two by two square with blue and orange as alternating background colors.">
@@ -128,7 +128,7 @@
         </a>
       </div>
 
-      <div class="col-12 col-sm-6 py-5">
+      <div class="project-link col-12 col-sm-6 py-5 my-4">
         <a href="36minutesoftype.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3"
             src="Images/36MinutesOfType_igArtboard-1.png"
