--- a/lacroix.html
+++ b/lacroix.html
@@ -170,27 +170,27 @@
 
 
     <div class="border-top py-5 mt-3" color="#ffffff">
-      <h2 class="header-2 text-center pb-3">
+      <h2 class="header-2 text-center pb-4">
         Looking for more?
       </h2>
 
       <div class="row">
 
-        <div class="col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-3 mx-auto">
           <a href="dew.html">
             <img class="img-fluid" src="Images/dew_homePage.png"
               alt="Two business cards. The front of the card shows the Dew logo and the back of the card features a vine pattern along with the name, job, and email address of the restaurant owner and the website, phone number, and address of the restaurant.">
           </a>
         </div>
 
-        <div class="col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-3 mx-auto">
           <a href="calpolyracing.html">
             <img class="img-fluid" src="Images/racing_homePage.png"
               alt="A laptop screen displaying the the Formula SAE page of the Cal Poly Racing website.">
           </a>
         </div>
 
-        <div class="col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-3 mx-auto">
           <a href="xvela.html">
             <img class="img-fluid" src="Images/xvela_homePage.png"
               alt="Four white icons (a ship's steering wheel, a globe with a GPS marker, binoculars, and a lightbulb) arranged in a two by two square with blue and orange as alternating background colors.">
