--- a/36minutesoftype.html
+++ b/36minutesoftype.html
@@ -278,27 +278,27 @@
 
 
     <div class="border-top py-5 mt-3" color="#ffffff">
-      <h2 class="header-2 text-center pb-3">
+      <h2 class="header-2 text-center pb-4">
         Looking for more?
       </h2>
 
       <div class="row">
 
-        <div class="col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-3 mx-auto">
           <a href="grove.html">
             <img class="img-fluid" src="Images/grove_homePage.png"
               alt="A computer showing the Grove home page of the website.">
           </a>
         </div>
 
-        <div class="col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-3 mx-auto">
           <a href="loop.html">
             <img class="img-fluid" src="Images/loop_homePage.png"
               alt="Five iPhone screens showing different pages of the Loop app: a list of daily tasks, an events page, a single task page, a user profile, and a community challenge page.">
           </a>
         </div>
 
-        <div class="col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-3 mx-auto">
           <a href="lacroix.html">
             <img class="img-fluid" src="Images/lacroix_homePage.png"
               alt="A rebranded carrying case of six bottles of LaCroix.">
