--- a/xvela.html
+++ b/xvela.html
@@ -210,27 +210,27 @@
 
 
     <div class="border-top py-5 mt-3" color="#ffffff">
-      <h2 class="header-2 text-center pb-3">
+      <h2 class="header-2 text-center pb-4">
         Looking for more?
       </h2>
 
       <div class="row">
 
-        <div class="col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-3 mx-auto">
           <a href="36minutesoftype.html">
             <img class="img-fluid" src="Images/36MinutesOfType_igArtboard-1.png"
               alt="Sketches of the letters A through I arranged in a 3 by 3 square.">
           </a>
         </div>
 
-        <div class="col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-3 mx-auto">
           <a href="grove.html">
             <img class="img-fluid" src="Images/grove_homePage.png"
               alt="A computer showing the Grove home page of the website.">
           </a>
         </div>
 
-        <div class="col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-3 mx-auto">
           <a href="loop.html">
             <img class="img-fluid" src="Images/loop_homePage.png"
               alt="Five iPhone screens showing different pages of the Loop app: a list of daily tasks, an events page, a single task page, a user profile, and a community challenge page.">
