--- a/grove.html
+++ b/grove.html
@@ -6,6 +6,14 @@
 
   <meta charset="utf-8">
 
+  <meta name="description"
+    content="Grove's brand balances the tech aspects of a software startup with the inviting nature of mental health professionals in a memorable and accessible way.">
+
+  <meta name="keywords"
+    content="Grove's brand balances the tech aspects of a software startup with the inviting nature of mental health professionals in a memorable and accessible way.">
+
+  <meta name="author" content="Sam Rogers">
+
   <!-- CSS only -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -24,7 +32,7 @@
 
   <link href="style.css" rel="stylesheet">
 
-  <title>Grove | Sam Rogers Design</title>
+  <title>Grove | Brand development for a mental health startup</title>
 
 </head>
 
@@ -71,8 +79,20 @@
 
       <div class="col-12 col-sm-5 py-3">
 
+        <h4 class="header-4">
+          Skills
+        </h4>
+
         <p class="body-2">
           Business Development / Identity Design / UX/UI
+        </p>
+
+        <h4 class="header-4">
+          Tools
+        </h4>
+
+        <p class="body-2">
+          Photoshop / Illustrator / InDesign / Sketch / Zeplin
         </p>
       </div>
 
