--- a/lacroix.html
+++ b/lacroix.html
@@ -6,6 +6,14 @@
 
   <meta charset="utf-8">
 
+  <meta name="description"
+    content="LaCroix's bold new look aligns with the modern, bright, and fun lifestyle that the company promotes.">
+
+  <meta name="keywords"
+    content="Graphic Designer, Freelance Graphic Designer, Graphic Design, San Diego Designer, Freelance Designer, San Diego, Remote Designer, Typography, Adobe Illustrator, Brand Design, Rebrand, Brand Redesign, LaCroix, Package Design, Logo Design, Beverage Packaging Design">
+
+  <meta name="author" content="Sam Rogers">
+
   <!-- CSS only -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -24,7 +32,7 @@
 
   <link href="style.css" rel="stylesheet">
 
-  <title>LaCroix Rebrand | Sam Rogers Design</title>
+  <title>LaCroix Rebrand | A new look for America's favorite sparkling water</title>
 
 </head>
 
@@ -70,11 +78,18 @@
     <div class="row">
 
       <div class="col-12 col-sm-5 py-3">
-
+        <h4 class="header-4">
+          Skills
+        </h4>
         <p class="body-2">
           Package Design / Identity Design / Logo Design
         </p>
-
+        <h4 class="header-4">
+          Tools
+        </h4>
+        <p class="body-2">
+          Illustrator
+        </p>
       </div>
 
       <div class="col-2">
