--- a/36minutesoftype.html
+++ b/36minutesoftype.html
@@ -6,6 +6,14 @@
 
   <meta charset="utf-8">
 
+  <meta name="description"
+    content="36 Minutes of Type is a quicker, scrappier play on the social media challenge 36 Days of Type.">
+
+  <meta name="keywords"
+    content="Graphic Designer, Freelance Graphic Designer, Graphic Design, San Diego Designer, Freelance Designer, San Diego, Remote Designer, Lettering, Handlettering, Typography, Letters, Numbers, 36 Days of Type, 36 Minutes of Type, Social Media Challenge, Passion Project, Illustration, Sketching">
+
+  <meta name="author" content="Sam Rogers">
+
   <!-- CSS only -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -24,7 +32,7 @@
 
   <link href="style.css" rel="stylesheet">
 
-  <title>36 Minutes of Type | Sam Rogers Design</title>
+  <title>36 Minutes of Type | A fun lettering exercise</title>
 
 </head>
 
@@ -70,9 +78,17 @@
     <div class="row">
 
       <div class="col-12 col-sm-5 py-3">
-
+        <h4 class="header-4">
+          Skills
+        </h4>
         <p class="body-2">
           Sketching / Lettering
+        </p>
+        <h4 class="header-4">
+          Tools
+        </h4>
+        <p class="body-2">
+          Sharpies / Paper / Stopwatch
         </p>
       </div>
 
