--- a/about.html
+++ b/about.html
@@ -6,6 +6,14 @@
 
   <meta charset="utf-8">
 
+  <meta name="description"
+    content="Sam Rogers is a multi-disciplinary designer who will elevate your company with custom branding, marketing collateral, iconography, and digital products.">
+
+  <meta name="keywords"
+    content="Graphic Designer, Freelance Graphic Designer, Graphic Design, Brand Design, Branding, UX Design, UI Design, UX/UI, San Diego Designer, Freelance Designer, Mobile App Design, Packaging Design, Marketing Design, Web Design, Icon Design, Lettering, San Diego, Remote Designer, Marketing Collateral, Social Media Content, Illustration, Typography, Graphic Design Portfolio, Design Portfolio, Cal Poly Graphic Design, Cal Poly Art and Design, Junior Designer">
+
+  <meta name="author" content="Sam Rogers">
+
   <!-- CSS only -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -24,7 +32,7 @@
 
   <link href="style.css" rel="stylesheet">
 
-  <title>About | Sam Rogers Design</title>
+  <title>About Me | Multi-disciplinary designer with a focus in branding</title>
 
 </head>
 
