--- a/calpolyracing.html
+++ b/calpolyracing.html
@@ -6,6 +6,14 @@
 
   <meta charset="utf-8">
 
+  <meta name="description"
+    content="A consistent brand and strong creative direction are key to cementing Cal Poly Racing as a professional and exciting organization.">
+
+  <meta name="keywords"
+    content="Graphic Designer, Freelance Graphic Designer, Graphic Design, San Diego Designer, Freelance Designer, San Diego, Remote Designer, Typography, Adobe Illustrator, Adobe InDesign, Adobe Photoshop, Brand Design, Automotive Brand Design, Brand Standards, Marketing Design, Marketing Collateral, Web Design, Website Design, UX/UI Design, T-shirt Design, Apparel Design, Livery Design, Baja Car Livery, Cal Poly Racing, SAE, Creative Direction, Creative Director">
+
+  <meta name="author" content="Sam Rogers">
+
   <!-- CSS only -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -24,7 +32,7 @@
 
   <link href="style.css" rel="stylesheet">
 
-  <title>Cal Poly Racing | Sam Rogers Design</title>
+  <title>Cal Poly Racing | Creative direction for an automotive organization</title>
 
 </head>
 
@@ -70,9 +78,17 @@
     <div class="row">
 
       <div class="col-12 col-sm-5 py-3">
-
+        <h4 class="header-4">
+          Skills
+        </h4>
         <p class="body-2">
           Creative Direction / Identity Design
+        </p>
+        <h4 class="header-4">
+          Tools
+        </h4>
+        <p class="body-2">
+          Photoshop / Illustrator / InDesign / Wix
         </p>
       </div>
 
