--- a/dew.html
+++ b/dew.html
@@ -6,6 +6,14 @@
 
   <meta charset="utf-8">
 
+  <meta name="description"
+    content="Dew is a rebrand of a San Luis Obispo restaurant and art gallery that highlights all things Central Coast.">
+
+  <meta name="keywords"
+    content="Graphic Designer, Freelance Graphic Designer, Graphic Design, San Diego Designer, Freelance Designer, San Diego, Remote Designer, Typography, Adobe Illustrator, Adobe InDesign, Adobe Photoshop, Brand Design, Rebrand, Brand Redesign, Logo Design, Restaurant Brand Design, Restaurant Branding, Business System, Brand Positioning, Brand Standards, Marketing Design, Marketing Collateral">
+
+  <meta name="author" content="Sam Rogers">
+
   <!-- CSS only -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -24,7 +32,7 @@
 
   <link href="style.css" rel="stylesheet">
 
-  <title>Dew | Sam Rogers Design</title>
+  <title>Dew | A new identity for a local restaurant</title>
 
 </head>
 
@@ -70,9 +78,17 @@
     <div class="row">
 
       <div class="col-12 col-sm-5 py-3">
-
+        <h4 class="header-4">
+          Skills
+        </h4>
         <p class="body-2">
           Brand Positioning / Logo Design / Identity Design
+        </p>
+        <h4 class="header-4">
+          Tools
+        </h4>
+        <p class="body-2">
+          Photoshop / Illustrator / InDesign
         </p>
       </div>
 
