--- a/loop.html
+++ b/loop.html
@@ -6,6 +6,14 @@
 
   <meta charset="utf-8">
 
+  <meta name="description"
+    content="Loop is an award-winning concept app that makes forming environmentally-friendly habits approachable and rewarding with personalized, manageable tasks.">
+
+  <meta name="keywords"
+    content="Graphic Designer, Freelance Graphic Designer, Graphic Design, UX Design, UI Design, UX/UI, San Diego Designer, Freelance Designer, Mobile App Design, San Diego, Remote Designer, Typography, Adobe Illustrator, Adobe XD, Problem Discovery, Hackathon, Hackathon Winner, Concept App, Climate Change, Behavior Change, Illustration, Prototype, Adobe Creative Jam, UX Strategy">
+
+  <meta name="author" content="Sam Rogers">
+
   <!-- CSS only -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -24,7 +32,7 @@
 
   <link href="style.css" rel="stylesheet">
 
-  <title>Loop | Sam Rogers Design</title>
+  <title>Loop | Award-winning concept app that tackles climate change</title>
 
 </head>
 
@@ -70,9 +78,17 @@
     <div class="row">
 
       <div class="col-12 col-sm-5 py-3">
-
+        <h4 class="header-4">
+          Skills
+        </h4>
         <p class="body-2">
           Problem Discovery / UX Strategy / Illustration
+        </p>
+        <h4 class="header-4">
+          Tools
+        </h4>
+        <p class="body-2">
+          Adobe XD / Illustrator
         </p>
         <h4 class="header-4">
           Adobe IBM iX Creative Jam 2019 Winner
