--- a/xvela.html
+++ b/xvela.html
@@ -6,6 +6,14 @@
 
   <meta charset="utf-8">
 
+  <meta name="description"
+    content="This set of icons fits seamlessly into XVELA's brand and is used in a variety of ways, such as on presentations, marketing collateral, and in web design.">
+
+  <meta name="keywords"
+    content="Graphic Designer, Freelance Graphic Designer, Graphic Design, San Diego Designer, Freelance Designer, San Diego, Remote Designer, Adobe Illustrator, Vector Graphics, Marketing Design, Marketing Collateral, Web Design, Website Design, Icon Design, Icon Library, Brand Application, Iconography, Maritime Shipping">
+
+  <meta name="author" content="Sam Rogers">
+
   <!-- CSS only -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -24,7 +32,7 @@
 
   <link href="style.css" rel="stylesheet">
 
-  <title>XVELA Icon Library | Sam Rogers Design</title>
+  <title>XVELA Icon Library | Representing the world of maritime shipping</title>
 
 </head>
 
@@ -70,9 +78,18 @@
     <div class="row">
 
       <div class="col-12 col-sm-5 py-3">
-
+        <h4 class="header-4">
+          Skills
+        </h4>
         <p class="body-2">
           Illustration / Iconography
+        </p>
+
+        <h4 class="header-4">
+          Tools
+        </h4>
+        <p class="body-2">
+          Illustrator
         </p>
 
       </div>
