New Branch Baby!
There's a new branch for some new things

--- a/index.html
+++ b/index.html
@@ -69,81 +69,61 @@
 
   <div class="mx-auto px-3" style="max-width: 1000px;">
 
-    <h1 class="header-1 pt-5 text-center">
-      <span class="header-1-white">If you need a </span>designer<span
-        class="header-1-white">, you’ve come to the right place.</span>
-    </h1>
-
     <div class="row pb-5 pt-3">
 
-      <div class="project-link col-12 col-sm-6 py-5 my-4">
+      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
         <a href="grove.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3" src="Images/grove_homePage.png"
-            alt="A computer showing the Grove home page of the website.">
-          <h2 class="header-2">
-            Grove
-          </h2>
+          <img class="mx-auto d-block img-solid pb-3"
+            src="Images/homePage/website_2022_homePage_thumbnailsGrove.png"
+            alt="The Grove logo over a yellow background.">
         </a>
       </div>
 
-      <div class="project-link col-12 col-sm-6 py-5 my-4">
+      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
         <a href="loop.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3" src="Images/loop_homePage.png"
-            alt="Five iPhone screens showing different pages of the Loop app: a list of daily tasks, an events page, a single task page, a user profile, and a community challenge page.">
-          <h2 class="header-2">
-            Loop
-          </h2>
+          <img class="mx-auto d-block img-solid pb-3"
+            src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
+            alt="The Loop logo over an off-white background.">
         </a>
       </div>
 
-      <div class="project-link col-12 col-sm-6 py-5 my-4">
+      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
         <a href="lacroix.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3" src="Images/lacroix_homePage.png"
-            alt="A rebranded carrying case of six bottles of LaCroix.">
-          <h2 class="header-2">
-            LaCroix Rebrand
-          </h2>
+          <img class="mx-auto d-block img-solid pb-3"
+            src="Images/homePage/website_2022_homePage_thumbnailsLaCroix.png"
+            alt="A rebranded LaCroix logo over a light blue background.">
         </a>
       </div>
 
-      <div class="project-link col-12 col-sm-6 py-5 my-4">
+      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
         <a href="dew.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3" src="Images/dew_homePage.png"
-            alt="Two business cards. The front of the card shows the Dew logo and the back of the card features a vine pattern along with the name, job, and email address of the restaurant owner and the website, phone number, and address of the restaurant.">
-          <h2 class="header-2">
-            Dew
-          </h2>
+          <img class="mx-auto d-block img-solid pb-3"
+            src="Images/homePage/website_2022_homePage_thumbnailsDew.png"
+            alt="The Dew logo over a dark green background.">
         </a>
       </div>
 
-      <div class="project-link col-12 col-sm-6 py-5 my-4">
+      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
         <a href="calpolyracing.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3" src="Images/racing_homePage.png"
-            alt="A laptop screen displaying the the Formula SAE page of the Cal Poly Racing website.">
-          <h2 class="header-2">
-            Cal Poly Racing
-          </h2>
+          <img class="mx-auto d-block img-solid pb-3"
+            src="Images/homePage/website_2022_homePage_thumbnailsCalPolyRacing.png"
+            alt="The Cal Poly Racing logo over a gray background.">
         </a>
       </div>
 
-      <div class="project-link col-12 col-sm-6 py-5 my-4">
+      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
         <a href="xvela.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3" src="Images/xvela_homePage.png"
-            alt="Four white icons (a ship's steering wheel, a globe with a GPS marker, binoculars, and a lightbulb) arranged in a two by two square with blue and orange as alternating background colors.">
-          <h2 class="header-2">
-            XVELA Icon Library
-          </h2>
+          <img class="mx-auto d-block img-solid pb-3"
+            src="Images/homePage/website_2022_homePage_thumbnailsXVELA.png"
+            alt="The XVELA logo over a bright blue background.">
         </a>
       </div>
 
-      <div class="project-link col-12 col-sm-6 py-5 my-4">
+      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
         <a href="36minutesoftype.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3"
-            src="Images/36MinutesOfType_igArtboard-1.png"
+            src="Images/homePage/website_2022_homePage_thumbnails36mot.png"
             alt="Sketches of the letters A through I arranged in a 3 by 3 square.">
-          <h2 class="header-2">
-            36 Minutes of Type
-          </h2>
         </a>
       </div>
 
