Start of new nav

--- a/index.html
+++ b/index.html
@@ -38,109 +38,52 @@
 </head>
 
 
-<body class="bg-dark">
+<body class="bg-white d-flex justify-content-center">
 
-  <nav class="navbar navbar-expand navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
-    style="max-width: 1000px;">
-    <a class="navbar-brand d-none d-sm-block" href="index.html">
-      <img src="Images/website_2021_logo_2.0.png" alt="Sam Rogers" height="40">
-    </a>
+  <div style="width: 90%; max-width: 1000px">
 
-    <a class="navbar-brand d-sm-none" href="index.html">
-      <img src="Images/website_2021_logo_small_2.0.png" alt="S.R." height="40">
-    </a>
+    <nav
+      class="sticky-top bg-white py-4 d-flex justify-content-between align-items-center">
 
-    <div style="flex:1;">
-    </div>
+      <img src="Images/website_2022_logo.png" alt="Sam Rogers." height="50px"
+        class="d-none d-md-block">
+      <img src="Images/website_2022_logo_small.png" alt="Sam Rogers." height="50px"
+        class="d-block d-md-none">
 
-    <div class="" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item active px-5">
-          <a class="nav-link menu-link" href="index.html">Work
+      <div class="d-flex align-items-center gap-4">
+        <div class="px-2 border bg-white" style="position: relative; height: 24px">
+          <a href="index.html" class="menu-link bg-white px-1"
+            style="position: absolute; top: -5px">
+            Work
           </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link menu-link" href="about.html">About
+          <a href="index.html" class="menu-link bg-white px-1">
+            Work
           </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="mx-auto px-3" style="max-width: 1000px;">
-
-    <div class="row pb-5 pt-3">
-
-      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
-        <a href="grove.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3"
-            src="Images/homePage/website_2022_homePage_thumbnailsGrove.png"
-            alt="The Grove logo over a yellow background.">
+        </div>
+        <a href="about.html" class="menu-link">
+          About
         </a>
       </div>
 
-      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
-        <a href="loop.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3"
-            src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
-            alt="The Loop logo over an off-white background.">
-        </a>
-      </div>
+    </nav>
 
-      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
-        <a href="lacroix.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3"
-            src="Images/homePage/website_2022_homePage_thumbnailsLaCroix.png"
-            alt="A rebranded LaCroix logo over a light blue background.">
-        </a>
-      </div>
-
-      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
-        <a href="dew.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3"
-            src="Images/homePage/website_2022_homePage_thumbnailsDew.png"
-            alt="The Dew logo over a dark green background.">
-        </a>
-      </div>
-
-      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
-        <a href="calpolyracing.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3"
-            src="Images/homePage/website_2022_homePage_thumbnailsCalPolyRacing.png"
-            alt="The Cal Poly Racing logo over a gray background.">
-        </a>
-      </div>
-
-      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
-        <a href="xvela.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3"
-            src="Images/homePage/website_2022_homePage_thumbnailsXVELA.png"
-            alt="The XVELA logo over a bright blue background.">
-        </a>
-      </div>
-
-      <div class="<! --project-link--> col-12 col-sm-6 col-md-4 py-5 my-4">
-        <a href="36minutesoftype.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3"
-            src="Images/homePage/website_2022_homePage_thumbnails36mot.png"
-            alt="Sketches of the letters A through I arranged in a 3 by 3 square.">
-        </a>
-      </div>
-
+    <div class="border mt-3">
     </div>
 
-    <div class="border-top py-5 mt-3" color="#ffffff">
+    <div class="py-5 mt-3" color="#000000">
       <div class="col text-center">
         <h1 class="header-1 pb-3">
-          Like what you see?
+          Got a project in mind?
         </h1>
         <h3 class="header-3 pb-3">
-          Maybe we should work together!
+          Let's build something cool together!
         </h3>
-        <a href="mailto:srogersdesign27@gmail.com" class="btn btn-primary my-3">Email
+        <a href="mailto:srogersdesign27@gmail.com" class=" my-3">Email
           Me</a>
       </div>
     </div>
+
+  </div>
 
 </body>
 
