XVELA Page like 90%
damn i did that fast !

--- a/xvela.html
+++ b/xvela.html
@@ -37,236 +37,148 @@
 </head>
 
 
-<body class="bg-dark">
+<body class="bg-white d-flex justify-content-center">
+  <div style="width: 90%; max-width: 1000px">
 
-  <nav class="navbar navbar-expand navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
-    style="max-width: 1000px;">
-    <a class="navbar-brand d-none d-sm-block" href="index.html">
-      <img src="Images/website_2021_logo_2.0.png" alt="Sam Rogers" height="40">
-    </a>
+    <div class="row pb-5 align-items-center">
+      <div class="col-12 col-sm-6 pe-5">
+        <p class="body-2" style="color: #0055B8;"> Representing the world of maritime
+          shipping </p>
+        <h1 class="header-1">XVELA Icon Library</h1>
+        <p class="body-1">I designed a set icons for XVELA, a company that creates
+          cloud-based collaborative tools for the maritime shipping industry.</p>
+      </div>
 
-    <a class="navbar-brand d-sm-none" href="index.html">
-      <img src="Images/website_2021_logo_small_2.0.png" alt="S.R." height="40">
-    </a>
-
-    <div style="flex:1;">
+      <div class="col-12 col-sm-6">
+        <img src="Images/xvela/website_2022_xvela_hero.png"
+          alt="A collection of XVELA icons arranged in a pile over a blue background."
+          class="img-fluid">
+      </div>
     </div>
 
-    <div class="" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item active px-5">
-          <a class="nav-link menu-link" href="index.html">Work
-          </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link menu-link" href="about.html">About
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="mx-auto px-3" style="max-width: 1000px;">
-
-    <img src="Images/xvela_heroImage.png" class="img-fluid py-5"
-      alt="Three rows of XVELA white icons connected by lines. The icon of a ship is highlighted in orange.">
-
-    <h1 class="header-1">
-      XVELA Icon Library
-    </h1>
-
-    <div class="row">
-
-      <div class="col-12 col-sm-5 py-3">
-        <h4 class="header-4">
-          Skills
-        </h4>
-        <p class="body-2">
-          Illustration / Iconography
-        </p>
-
-        <h4 class="header-4">
-          Tools
-        </h4>
-        <p class="body-2">
-          Illustrator
-        </p>
-
-      </div>
-
-      <div class="col-2">
-      </div>
-
-      <div class="col-12 col-sm-5 py-3">
-        <p class="body-1">
-          I designed a set of 128 icons for XVELA, a company that creates cloud-based
-          collaborative tools for the maritime shipping industry.
-        </p>
-      </div>
-
+    <div class="border mt-3">
     </div>
 
-    <div class="row py-3">
+    <div class="row pt-4 pb-2">
+      <div class="col-12 col-sm-6">
+        <h4 class="header-4">Skills</h4>
+        <p class="body-2">Illustration</p>
+        <p class="body-2">Iconography</p>
+      </div>
+      <div class="col-12 col-sm-6">
+        <h4 class="header-4">Tools</h4>
+        <p class="body-2">Adobe Illustrator</p>
+      </div>
+    </div>
 
-      <div class="col-6 col-sm-3">
-        <img src="Images/xvela-icon-library_sunandcloud-orange.png" class="img-fluid py-4"
-          alt="An icon of the sun behind a cloud.">
+    <div class="border mb-5">
+    </div>
+
+    <div class="row py-4 align-items-center">
+      <div class="col-12 col-sm-6">
+        <img src="Images/xvela/website_2022_xvela_iconPhoto.png" alt="."
+          class="img-fluid">
       </div>
 
-      <div class="col-6 col-sm-3">
-        <img src="Images/xvela-icon-library_constellation-orange.png"
-          class="img-fluid py-4" alt="An icon of a constellation.">
+      <div class="col-12 col-sm-6 ps-5">
+        <p class="body-3">XVELA needed custom icons to illustrate complex shipping and
+          software processes and add more personality to the brand.</p>
       </div>
-
-      <div class="col-6 col-sm-3">
-        <img src="Images/xvela-icon-library_badge-orange.png" class="img-fluid py-4"
-          alt="An icon of a badge.">
-      </div>
-
-      <div class="col-6 col-sm-3">
-        <img src="Images/xvela-icon-library_pineapple-orange.png" class="img-fluid py-4"
-          alt="An icon of a pineapple.">
-      </div>
-
     </div>
 
     <div class="row py-5">
-
-      <div class="col-12 col-sm-5 py-2">
-        <h2 class="header-2">
-          So What's the Deal?
-        </h2>
-        <p class="body-1">
-          XVELA needed branded icons to use on marketing collateral, presentations, and
-          their newly redesigned website.
-        </p>
+      <div class="col-2 col-sm-3">
+        <img src="Images/xvela/website_2022_xvela_gifs_pineapplePhoto.png" alt="."
+          class="img-fluid">
       </div>
-
-      <div class="col-2">
+      <div class="col-2 col-sm-3">
+        <img src="Images/xvela/website_2022_xvela_gifs_hatIcon.png" alt="."
+          class="img-fluid">
       </div>
-
-      <div class="col-12 col-sm-5 py-2">
-        <h2 class="header-2">
-          Let's Fix It.
-        </h2>
-        <p class="body-1">
-          The linear style of the custom icon library evokes style of XVELA's logotype and
-          fits seamlessly within their brand.
-        </p>
+      <div class="col-2 col-sm-3">
+        <img src="Images/xvela/website_2022_xvela_gifs_BinocularsPhoto.png" alt="."
+          class="img-fluid">
       </div>
-
+      <div class="col-2 col-sm-3">
+        <img src="Images/xvela/website_2022_xvela_gifs_wheelIcon.png" alt="."
+          class="img-fluid">
+      </div>
     </div>
 
-    <div class="row">
-
-      <div class="col-6 col-sm-3">
-        <img src="Images/xvela-icon-library-wheel.png" class="img-fluid pt-4"
-          alt="An icon of a ship's steering wheel.">
+    <div class="row py-4">
+      <div class="col-12 col-sm-6">
+        <img src="Images/xvela/website_2022_xvela_website.png" alt="." class="img-fluid">
       </div>
-
-      <div class="col-6 col-sm-3">
-        <img src="Images/xvela-icon-library_locationglobe.png" class="img-fluid pt-4"
-          alt="An icon of a globe with a GPS marker on it.">
+      <div class="col-12 col-sm-6">
+        <img src="Images/xvela/website_2022_xvela_twitter.png" alt="." class="img-fluid">
       </div>
-
-      <div class="col-6 col-sm-3">
-        <img src="Images/xvela-icon-library_crane.png" class="img-fluid pt-4"
-          alt="An icon of a shipyard crane carrying a container.">
-      </div>
-
-      <div class="col-6 col-sm-3">
-        <img src="Images/xvela-icon-library_calendarmonth.png" class="img-fluid pt-4"
-          alt="An icon of a calendar with a small clock in the corner.">
-      </div>
-
     </div>
 
-    <div class="row">
-
-      <div class="col-6 col-sm-3">
-        <img src="Images/xvela-icon-library_binoculars.png" class="img-fluid pt-4"
-          alt="An icon of a pair of binoculars.">
-      </div>
-
-      <div class="col-6 col-sm-3">
-        <img src="Images/xvela-icon-library_lightbulb2.png" class="img-fluid pt-4"
-          alt="An icon of a lightbulb.">
-      </div>
-
-      <div class="col-6 col-sm-3">
-        <img src="Images/xvela-icon-library_shipfront.png" class="img-fluid py-4"
-          alt="An icon of a ship, viewed from the front.">
-      </div>
-
-      <div class="col-6 col-sm-3">
-        <img src="Images/xvela-icon-library-radar.png" class="img-fluid py-4"
-          alt="An icon of a radar interface.">
-      </div>
-
+    <div class="py-5 mx-auto" style="max-width: 65%;">
+      <p class="body-3">The linear style of the icons evokes style of XVELA’s logotype and
+        fits
+        seamlessly within their existing identity.</p>
     </div>
 
-    <div class="mx-auto" style="max-width: 700px;">
-      <p class="body-1 pt-5">
-        The icons represent concepts such as XVELA’s values of collaboration, security,
-        and organization, as well as material objects that illustrate aspects of maritime
-        shipping—think ships, navigation, ports, weather, and commodities.
-      </p>
+    <div class="py-4">
+      <img src="Images/xvela/website_2022_xvela_iconPhotoPanorama.png" alt="."
+        class="img-fluid" style="width: 100%;">
     </div>
 
-    <img src="Images/xvela_mockup2.png" class="img-fluid"
-      alt="A computer displaying the icons on a contact card on XVELA's website.">
+    <div class="py-5 mx-auto" style="max-width: 65%;">
+      <p class="body-3">The icons represent XVELA’s
+        values of
+        collaboration, security, and
+        organization,
+        as well as material objects relevant to maritime shipping—think ships, ports,
+        weather, and commodities.</p>
+    </div>
 
-    <img src="Images/xvela_twitter.png" class="img-fluid"
-      alt="The top half of an iPhone displaying XVELA's Twitter profile, where the icons are used as the cover image.">
+    <div class="py-4">
+      <img src="Images/xvela/website_2022_xvela_iconGrid.png" alt="." class="img-fluid">
+    </div>
 
-    <img src="Images/xvela_mockup1.png" class="img-fluid"
-      alt="A computer displaying the icons alongside value propositions on XVELA's website.">
+    <div class="pb-5">
+      <img src="Images/xvela/website_2022_xvela_fullIconLibrary.png" alt="."
+        class="img-fluid">
+    </div>
 
-    <img src="Images/xvela-icon-library-141.png" class="img-fluid pb-5"
-      alt="The full library of 128 icons.">
+    <!-- more projects section -->
 
+    <div class="border mt-3">
+    </div>
 
-    <div class="border-top py-5 mt-3" color="#ffffff">
+    <div class="py-5 mt-3" color="#ffffff">
       <h2 class="header-2 text-center pb-4">
         Looking for more?
       </h2>
 
-      <div class="row">
+      <div class="row pt-3">
 
-        <div class="project-link col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-4 mx-auto">
           <a href="36minutesoftype.html">
-            <img class="img-fluid" src="Images/36MinutesOfType_igArtboard-1.png"
+            <img class="img-fluid"
+              src="Images/homePage/website_2022_homePage_thumbnails36mot.png"
               alt="Sketches of the letters A through I arranged in a 3 by 3 square.">
           </a>
         </div>
 
-        <div class="project-link col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-4 mx-auto">
           <a href="grove.html">
-            <img class="img-fluid" src="Images/grove_homePage.png"
-              alt="A computer showing the Grove home page of the website.">
+            <img class="img-fluid"
+              src="Images/homePage/website_2022_homePage_thumbnailsGrove.png"
+              alt="The Grove logo over a yellow background.">
           </a>
         </div>
 
-        <div class="project-link col-12 col-sm-3 mx-auto">
+        <div class="project-link col-12 col-sm-4 mx-auto">
           <a href="loop.html">
-            <img class="img-fluid" src="Images/loop_homePage.png"
-              alt="Five iPhone screens showing different pages of the Loop app: a list of daily tasks, an events page, a single task page, a user profile, and a community challenge page.">
+            <img class="img-fluid"
+              src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
+              alt="The Loop logo over and off-white background.">
           </a>
         </div>
 
-      </div>
-    </div>
-
-    <div class="border-top py-5 mt-3" color="#ffffff">
-      <div class="col text-center">
-        <h1 class="header-1 pb-3">
-          Like what you see?
-        </h1>
-        <h3 class="header-3 pb-3">
-          Maybe we should work together!
-        </h3>
-        <a href="mailto:srogersdesign27@gmail.com" class="btn btn-primary my-3">Email
-          Me</a>
       </div>
     </div>
 
