--- a/xvela.html
+++ b/xvela.html
@@ -76,7 +76,8 @@
 
     <div class="row py-4 align-items-center">
       <div class="col-12 col-sm-6">
-        <img src="Images/xvela/website_2022_xvela_iconPhoto.png" alt="."
+        <img src="Images/xvela/website_2022_xvela_iconPhoto.png"
+          alt="An assortment of XVELA icons over a blue-toned photo of a port."
           class="img-fluid">
       </div>
 
@@ -88,29 +89,33 @@
 
     <div class="row py-5">
       <div class="col-2 col-sm-3">
-        <img src="Images/xvela/website_2022_xvela_gifs_pineapplePhoto.png" alt="."
-          class="img-fluid">
+        <img src="Images/xvela/website_2022_xvela_gifs_pineapplePhoto.png"
+          alt="A pineapple." class="img-fluid">
       </div>
       <div class="col-2 col-sm-3">
-        <img src="Images/xvela/website_2022_xvela_gifs_hatIcon.png" alt="."
-          class="img-fluid">
+        <img src="Images/xvela/website_2022_xvela_gifs_hatIcon.png"
+          alt="An icon of a sailor’s hat." class="img-fluid">
       </div>
       <div class="col-2 col-sm-3">
-        <img src="Images/xvela/website_2022_xvela_gifs_BinocularsPhoto.png" alt="."
-          class="img-fluid">
+        <img src="Images/xvela/website_2022_xvela_gifs_BinocularsPhoto.png"
+          alt="A pair of binoculars." class="img-fluid">
       </div>
       <div class="col-2 col-sm-3">
-        <img src="Images/xvela/website_2022_xvela_gifs_wheelIcon.png" alt="."
-          class="img-fluid">
+        <img src="Images/xvela/website_2022_xvela_gifs_wheelIcon.png"
+          alt="An icon of a ship’s steering wheel." class="img-fluid">
       </div>
     </div>
 
     <div class="row py-4">
       <div class="col-12 col-sm-6">
-        <img src="Images/xvela/website_2022_xvela_website.png" alt="." class="img-fluid">
+        <img src="Images/xvela/website_2022_xvela_website.png"
+          alt="A computer displaying the icons alongside value propositions on XVELA’s website."
+          class="img-fluid">
       </div>
       <div class="col-12 col-sm-6">
-        <img src="Images/xvela/website_2022_xvela_twitter.png" alt="." class="img-fluid">
+        <img src="Images/xvela/website_2022_xvela_twitter.png"
+          alt="The top half of an iPhone displaying XVELA’s Twitter profile, where the icons are used as the cover image."
+          class="img-fluid">
       </div>
     </div>
 
@@ -121,7 +126,8 @@
     </div>
 
     <div class="py-4">
-      <img src="Images/xvela/website_2022_xvela_iconPhotoPanorama.png" alt="."
+      <img src="Images/xvela/website_2022_xvela_iconPhotoPanorama.png"
+        alt="Three rows of XVELA icons, connected by lines, over a blue and orange-toned photo of a container ship at sea."
         class="img-fluid" style="width: 100%;">
     </div>
 
@@ -135,12 +141,14 @@
     </div>
 
     <div class="py-4">
-      <img src="Images/xvela/website_2022_xvela_iconGrid.png" alt="." class="img-fluid">
+      <img src="Images/xvela/website_2022_xvela_iconGrid.png"
+        alt="Icons depicting a badge, a lightbulb, the sun behind a cloud, connected puzzle pieces, a compass, a calendar, a buoy, and a globe on alternating blue and orange backgrounds."
+        class="img-fluid">
     </div>
 
     <div class="pb-5">
-      <img src="Images/xvela/website_2022_xvela_fullIconLibrary.png" alt="."
-        class="img-fluid">
+      <img src="Images/xvela/website_2022_xvela_fullIconLibrary.png"
+        alt="The full icon library." class="img-fluid">
     </div>
 
     <!-- more projects section -->
